# nn-graph-experimental

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README  configure  profile  q
.github/workflows/: ci.yaml
auto/: cmake
cmake/: Findcunn-ops.cmake  Findstdnn-ops-cuda.cmake  Findstdnn-ops.cmake  Findstdtensor.cmake  Findstdtracer.cmake  deps.cmake  examples.cmake  gtest.cmake  tests.cmake
docker/alpine/: Dockerfile
examples/: a-plus-b.cpp  bench-ops.cpp  bench-utils.hpp  composite-derivative.cpp  gpu-example.cpp  mnist-dataset.cpp  mnist.hpp  pascal-triangle.cpp  quadratic-function.cpp  simple-derivative.cpp  trace.cpp  trace.hpp  train-cnn.cpp  train-mnist-cnn.cpp  train-mnist-slp.cpp  train-model.cpp  train-slp.cpp  trainer.hpp  utils.hpp
examples/include/stdml/: filesystem  prepro
examples/include/stdml/ds/: mnist
examples/include/stdml/ds/bits/: mnist.hpp
include/experimental/: reflect  zip
include/experimental/bits/: reflect.hpp  zip.hpp
include/nn/: gradients  graph
include/nn/bits/: gradients.hpp
include/nn/bits/graph/: apply.hpp  back_propagation.hpp  builder.hpp  common.hpp  cuda_ops.hpp  device.hpp  execution.hpp  gradient_descent.hpp  node.hpp  operator.hpp  optimizer.hpp  runtime.hpp  symbol.hpp  symbol_manager.hpp  trace.hpp  trace_enabled.hpp  variable_manager.hpp
include/nn/bits/graph/devices/: cpu.hpp  nvidia_gpu.hpp
include/nn/bits/ops/: chunk.hpp  constant.hpp  cuda_ops.hpp  example_gpu_ops.hpp
include/nn/bits/ops/gradients/: reshape.hpp
include/nn/contrib/graph/layers/: conv.hpp  dense.hpp  output.hpp
include/nn/experimental/bits/ops/grad/: reshape.hpp
include/stdml/: control  model
include/stdml/bits/: control.hpp  model.hpp
include/stdml/experimental/: control  evaluate  models
include/stdml/experimental/bits/: control.hpp  model.hpp
include/stdml/experimental/bits/eval/: binary_result.hpp  classification.hpp
include/stdml/experimental/bits/model/: std_classification_model.hpp  std_supervised_model.hpp
include/ttl/: copy  show_size
include/ttl/bits/: copy.hpp  get.hpp  mixed_tensor_buffer.hpp  show_size.hpp  std_cuda_runtime.hpp  std_scalar_type_encoding.hpp  std_tensor_buffer.hpp  std_tensor_symbol.hpp
include/ttl/experimental/: get  show_size
include/ttl/nn/: computation_graph  gradients
include/ttl/nn/bits/: gradients.hpp  tuple.hpp
include/ttl/nn/bits/graph/: apply.hpp  back_propagation.hpp  binding.hpp  builder.hpp  common.hpp  cuda_ops.hpp  device.hpp  execution.hpp  model_buffer.hpp  node.hpp  operator.hpp  runtime.hpp  symbol.hpp  symbol_manager.hpp  tensor.hpp  trace.hpp  variable_manager.hpp
include/ttl/nn/bits/ops/: cuda_ops.hpp
include/ttl/nn/contrib/graph/layers/: conv.hpp  dense.hpp  output.hpp
include/ttl/nn/graph/: layers
include/ttl/nn/graph/bits/layers/: conv2d.hpp  dense.hpp  layer.hpp  output.hpp
src/nn/ops/: example_gpu_ops.cu
tests/: test_builder.cpp  test_gradient.cpp  test_node.cpp  test_quadratic_function.cpp  test_symbol.cpp  test_tensor_buffer.cpp  test_variable_manager.cpp  test_zip.cpp
